--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,10 @@ html {
     margin: 0;
 }
 body {
-    margin:0;
+    margin:0 0 70px 0;
+    /* bottom 70px setting is because of the fixed footer. 
+    if less, the content in main section will be blocked 
+    by the fixed footer  */
 }
 h1,h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -21,7 +24,7 @@ a:hover {
 }
 
 /* Header + Main Style
--------------------------------- */
+----------------------------------- */
 header,main {
     background-color: #ffffff;
 }
@@ -29,7 +32,7 @@ header,main {
     text-decoration-line: none;
 }
 /* Header Style
--------------------------------- */
+----------------------------------- */
 header {
     border-bottom: 2px #cccccc solid;
     height: 100px;
@@ -38,8 +41,9 @@ header {
 header h1 {
     background-color: #4aaaa5;
     padding: 32px 30px 32px 30px;
-    margin:0 auto;
-    display:inline-block;
+    float: left;
+    margin-top: 0px;
+    margin-left: 0px;
     color:#ffffff;
 }
 nav {
@@ -59,35 +63,40 @@ nav {
     margin-right:20px;  
 }
 .content-wrap {
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
+    overflow: auto;
 }
 /* Main Style
 --------------------------------------  */
 main {
     border: 1px #cccccc solid;
-    padding:15px;
-    overflow: auto;
+    /* overflow: auto; */
 
 }
 main h1 {
     color: #4aaaa5;
     padding-bottom:20px;
+    padding-left: 20px;
+    margin-left: 20px;
+    margin-right:20px;
     border-bottom:3px #cccccc solid;
 }
 main img {
     width: 20%;
     float: left;
     margin-right: 20px;
-    border-radius:18px;
+    padding-left: 20px;
 } 
 main p {
     text-indent: 30px;
     color: #cccccc;
     font-size: 20px;
+    margin-right: 20px;
+    margin-left:20px;
 }
 /* Footer Style
---------------------------------- */
+-------------------------------------- */
 footer {
     background-color: #666666;
     border-top: 7px #4aaaa5 solid;
@@ -109,4 +118,60 @@ footer p {
     padding-bottom:0;
     margin-top:8px;
     margin-bottom:0;
+}
+/* Form Style
+--------------------------------------- */
+form {
+    color:#cccccc;
+    /* max-width: 960px; */
+    margin: 0 20px 0 20px;
+}
+input[ type=text ] {
+    width: 100%;
+    padding: 6px 10px;
+    margin:8px 0;
+    border-radius: 2px;
+    box-sizing:border-box;
+}
+input[ type=message ] {
+    width: 100%;
+    height: 200px;
+    padding: 6px 10px;
+    margin:8px 0;
+    border-radius: 2px;
+    box-sizing:border-box;
+}
+.container {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,300px);
+    grid-gap: 30px;
+    margin-left:20px;
+    margin-right:20px;
+}
+.container > div:nth-child(even){
+    background-image: url(../images/a-snow.jpg);
+    background-size:300px 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-clip: border-box;
+}
+.container > div:nth-child(odd){
+    background-image: url(../images/a-house.jpg);
+    background-size:300px 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-clip: border-box;
+}
+
+.f-name {
+background-color: #4aaaa5;
+position: relative;
+top: 200px;
+width: 100%;
+padding-top: 20px;
+padding-bottom: 20px;
+color: #cccccc;
+font-size: 150%;
+text-align: center;
 }
